baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__01_lexer__attrs.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Class "class"
Word "Config"
LBrace "{"
Word "id"
Word "int"
At "@"
Word "stream"
Dot "."
Word "must_exist"
Word "name"
Word "string"
At "@"
Word "stream"
Dot "."
Word "done"
Word "data"
Word "AttrFoo"
At "@"
Word "stream"
Dot "."
Word "must_exist"
At "@"
Word "stream"
Dot "."
Word "done"
RBrace "}"
Class "class"
Word "AttrFoo"
LBrace "{"
Word "x"
Word "int"
RBrace "}"
Class "class"
Word "WithBlockAttrs"
LBrace "{"
Word "a"
Word "int"
Word "b"
Word "string"
AtAt "@@"
Word "stream"
Dot "."
Word "done"
RBrace "}"
