baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__01_lexer__basic.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Class "class"
Word "Foo"
LBrace "{"
Word "a"
Word "int"
Word "b"
Word "string"
Word "c"
Word "float"
Word "d"
Word "bool"
RBrace "}"
Class "class"
Word "Bar"
LBrace "{"
Word "ref"
Word "Foo"
Word "items"
Word "int"
LBracket "["
RBracket "]"
Word "nested"
Word "Foo"
LBracket "["
RBracket "]"
Word "mapping"
Word "map"
Less "<"
Word "string"
Comma ","
Word "int"
Greater ">"
Word "opt"
Word "int"
Question "?"
RBrace "}"
