baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__01_lexer__builtin_refs.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "that"
Word "builtin"
Word "types"
Word "get"
Word "$stream"
Word "variants"
Word "generated"
Dot "."
Slash "/"
Slash "/"
Word "The"
Word "http"
Dot "."
Word "baml"
Word "builtin"
Word "defines"
Backtick "`"
Class "class"
Word "Request"
Backtick "`"
Word "and"
Backtick "`"
Class "class"
Word "Response"
Backtick "`"
In "in"
Word "baml"
Dot "."
Word "http"
Semicolon ";"
Slash "/"
Slash "/"
Word "referencing"
Word "them"
In "in"
Word "user"
Word "classes"
Word "should"
Word "produce"
Word "valid"
Word "$stream"
Word "expansions"
Dot "."
Class "class"
Word "ApiCall"
LBrace "{"
Word "request"
Word "baml"
Dot "."
Word "http"
Dot "."
Word "Request"
Word "label"
Word "string"
RBrace "}"
Class "class"
Word "WithResponse"
LBrace "{"
Word "response"
Word "baml"
Dot "."
Word "http"
Dot "."
Word "Response"
Word "status"
Word "string"
RBrace "}"
Class "class"
Word "MixedBuiltin"
LBrace "{"
Word "requests"
Word "baml"
Dot "."
Word "http"
Dot "."
Word "Request"
LBracket "["
RBracket "]"
Word "metadata"
Word "map"
Less "<"
Word "string"
Comma ","
Word "baml"
Dot "."
Word "http"
Dot "."
Word "Request"
Greater ">"
Word "maybe_request"
Word "baml"
Dot "."
Word "http"
Dot "."
Word "Request"
Question "?"
Word "union_request"
Word "baml"
Dot "."
Word "http"
Dot "."
Word "Request"
Pipe "|"
Word "string"
RBrace "}"
Slash "/"
Slash "/"
Word "Direct"
Word "reference"
Word "to"
Word "the"
Word "$stream"
Word "variant"
Word "of"
Word "a"
Word "builtin"
Class "class"
Dot "."
Class "class"
Word "WithStreamRef"
LBrace "{"
Word "partial"
Word "baml"
Dot "."
Word "http"
Dot "."
Word "Request$stream"
RBrace "}"
