baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__01_lexer__edge_cases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Class "class"
Word "SelfRef"
LBrace "{"
Word "name"
Word "string"
Word "children"
Word "SelfRef"
LBracket "["
RBracket "]"
RBrace "}"
Class "class"
Word "AllMustExist"
LBrace "{"
Word "a"
Word "int"
At "@"
Word "stream"
Dot "."
Word "must_exist"
Word "b"
Word "string"
At "@"
Word "stream"
Dot "."
Word "must_exist"
Word "c"
Word "float"
At "@"
Word "stream"
Dot "."
Word "must_exist"
RBrace "}"
Class "class"
Word "AllDone"
LBrace "{"
Word "a"
Word "int"
At "@"
Word "stream"
Dot "."
Word "done"
Word "b"
Word "string"
At "@"
Word "stream"
Dot "."
Word "done"
Word "c"
Word "EdgeFoo"
At "@"
Word "stream"
Dot "."
Word "done"
RBrace "}"
Class "class"
Word "EdgeFoo"
LBrace "{"
Word "x"
Word "int"
RBrace "}"
Class "class"
Word "NeverFields"
LBrace "{"
Word "lit_int"
IntegerLiteral "42"
Word "lit_str"
Quote "\""
Word "fixed"
Quote "\""
Word "lit_bool"
Word "true"
RBrace "}"
Class "class"
Word "MustExistClass"
LBrace "{"
Word "v"
Word "int"
AtAt "@@"
Word "stream"
Dot "."
Word "must_exist"
RBrace "}"
Class "class"
Word "UnionWithMustExist"
LBrace "{"
Word "mixed"
Word "MustExistClass"
Pipe "|"
IntegerLiteral "5"
RBrace "}"
