baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__01_lexer__ns_foo_with_top_level_refs.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Types"
Word "defined"
In "in"
Word "namespace"
Word "foo"
Class "class"
Word "NsClass"
LBrace "{"
Word "value"
Word "string"
RBrace "}"
Enum "enum"
Word "NsEnum"
LBrace "{"
Word "Alpha"
Word "Beta"
RBrace "}"
Word "type"
Word "NsAlias"
Equals "="
Word "string"
Pipe "|"
Word "int"
Slash "/"
Slash "/"
Word "Cross-namespace"
Word "references"
Word "to"
Word "root"
Word "types"
Class "class"
Word "NsRefToTop"
LBrace "{"
Word "inner"
Word "root"
Dot "."
Word "Inner"
Word "status"
Word "root"
Dot "."
Word "Status"
Word "items"
Word "root"
Dot "."
Word "Inner"
LBracket "["
RBracket "]"
Word "alias_ref"
Word "root"
Dot "."
Word "ClassAlias"
RBrace "}"
